Added more dogs to the quiz.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
 
+    <link rel="icon" type="image/x-icon" href="./img/paw_icon.png">
+
     <script src="https://kit.fontawesome.com/a4c4836372.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,7 +76,6 @@
 
             <div class="no-match" hidden>
                 <p><b>Sorry, there wasn't a match. Please try again.</b></p>
-                <p>Or, you can <span class="reset-span">Reset</span> your search.</p>
             </div>
 
             <button class="search" hidden>Find My Pooch!</button>
